--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,14 @@
 .Name{
   margin-left: 5%;
 }
+/* body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+} */
+
+div{
+  margin-left: 250px;
+  margin-top: 200px;
+}
